--- a/CefMap.csproj
+++ b/CefMap.csproj
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\CefSharp.Common.90.6.50\build\CefSharp.Common.props" Condition="Exists('packages\CefSharp.Common.90.6.50\build\CefSharp.Common.props')" />
+  <Import Project="packages\cef.redist.x86.90.6.5\build\cef.redist.x86.props" Condition="Exists('packages\cef.redist.x86.90.6.5\build\cef.redist.x86.props')" />
+  <Import Project="packages\cef.redist.x64.90.6.5\build\cef.redist.x64.props" Condition="Exists('packages\cef.redist.x64.90.6.5\build\cef.redist.x64.props')" />
   <Import Project="packages\CefSharp.WinForms.85.3.130\build\CefSharp.WinForms.props" Condition="Exists('packages\CefSharp.WinForms.85.3.130\build\CefSharp.WinForms.props')" />
   <Import Project="packages\CefSharp.Common.85.3.130\build\CefSharp.Common.props" Condition="Exists('packages\CefSharp.Common.85.3.130\build\CefSharp.Common.props')" />
-  <Import Project="packages\cef.redist.x86.85.3.13\build\cef.redist.x86.props" Condition="Exists('packages\cef.redist.x86.85.3.13\build\cef.redist.x86.props')" />
-  <Import Project="packages\cef.redist.x64.85.3.13\build\cef.redist.x64.props" Condition="Exists('packages\cef.redist.x64.85.3.13\build\cef.redist.x64.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -44,6 +45,15 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CefSharp, Version=90.6.50.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.Common.90.6.50\lib\net452\CefSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="CefSharp.Core, Version=90.6.50.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.Common.90.6.50\lib\net452\CefSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="CefSharp.WinForms, Version=90.6.50.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.WinForms.90.6.50\lib\net452\CefSharp.WinForms.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -102,13 +112,16 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\cef.redist.x64.85.3.13\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x64.85.3.13\build\cef.redist.x64.props'))" />
-    <Error Condition="!Exists('packages\cef.redist.x86.85.3.13\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x86.85.3.13\build\cef.redist.x86.props'))" />
     <Error Condition="!Exists('packages\CefSharp.Common.85.3.130\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.85.3.130\build\CefSharp.Common.props'))" />
     <Error Condition="!Exists('packages\CefSharp.Common.85.3.130\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.85.3.130\build\CefSharp.Common.targets'))" />
     <Error Condition="!Exists('packages\CefSharp.WinForms.85.3.130\build\CefSharp.WinForms.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.WinForms.85.3.130\build\CefSharp.WinForms.props'))" />
     <Error Condition="!Exists('packages\CefSharp.WinForms.85.3.130\build\CefSharp.WinForms.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.WinForms.85.3.130\build\CefSharp.WinForms.targets'))" />
+    <Error Condition="!Exists('packages\cef.redist.x64.90.6.5\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x64.90.6.5\build\cef.redist.x64.props'))" />
+    <Error Condition="!Exists('packages\cef.redist.x86.90.6.5\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x86.90.6.5\build\cef.redist.x86.props'))" />
+    <Error Condition="!Exists('packages\CefSharp.Common.90.6.50\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.90.6.50\build\CefSharp.Common.props'))" />
+    <Error Condition="!Exists('packages\CefSharp.Common.90.6.50\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.90.6.50\build\CefSharp.Common.targets'))" />
   </Target>
   <Import Project="packages\CefSharp.Common.85.3.130\build\CefSharp.Common.targets" Condition="Exists('packages\CefSharp.Common.85.3.130\build\CefSharp.Common.targets')" />
   <Import Project="packages\CefSharp.WinForms.85.3.130\build\CefSharp.WinForms.targets" Condition="Exists('packages\CefSharp.WinForms.85.3.130\build\CefSharp.WinForms.targets')" />
+  <Import Project="packages\CefSharp.Common.90.6.50\build\CefSharp.Common.targets" Condition="Exists('packages\CefSharp.Common.90.6.50\build\CefSharp.Common.targets')" />
 </Project>
