--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="98.1.21" targetFramework="net472" />
-  <package id="cef.redist.x86" version="98.1.21" targetFramework="net472" />
-  <package id="CefSharp.Common" version="98.1.210" targetFramework="net472" />
-  <package id="CefSharp.WinForms" version="98.1.210" targetFramework="net472" />
+  <package id="Azure.Core" version="1.6.0" targetFramework="net472" />
+  <package id="cef.redist.x64" version="105.3.33" targetFramework="net472" />
+  <package id="cef.redist.x86" version="105.3.33" targetFramework="net472" />
+  <package id="CefSharp.Common" version="105.3.330" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="105.3.330" targetFramework="net472" />
+  <package id="JsonSubTypes" version="1.9.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.23" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Polly" version="7.2.3" targetFramework="net472" />
+  <package id="RestSharp" version="106.13.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
